--- a/composer.json
+++ b/composer.json
@@ -2,6 +2,7 @@
     "require": {
         "phpmailer/phpmailer": "^6.10",
         "google/apiclient": "^2.18",
-        "vlucas/phpdotenv": "^5.6"
+        "vlucas/phpdotenv": "^5.6",
+        "cboden/ratchet": "^0.4.4"
     }
 }
